--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "http": "0.0.0"
+    "http": "0.0.0",
+    "rollbar": "^2.5.1"
   },
   "engines": {
     "node": "8.11.x"
