--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "newrelic": "^5.0.0",
     "path": "^0.12.7",
     "pg": "^7.9.0",
+    "pg-hstore": "^2.3.2",
     "rollbar": "^2.5.1",
     "sequelize": "^5.1.0",
+    "sequelize-cli": "^5.4.0",
     "yn": "^3.0.0"
   },
   "engines": {
